--- a/.github/workflows/cml.yml
+++ b/.github/workflows/cml.yml
@@ -12,9 +12,9 @@ jobs:
       # - uses: actions/setup-node@v3
       #   with:
       #     node-version: '16'
-      # - uses: actions/setup-python@v4
-      #   with:
-      #     python-version: '3.x'
+      - uses: actions/setup-python@v4
+        with:
+           python-version: '3.12.0'
       - name: Run Super-Linter
         uses: github/super-linter@latest
         env: 
@@ -22,8 +22,8 @@ jobs:
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
       - uses: iterative/setup-cml@v1
-      # - name: Train model
-      #   run: |
-      #     # Your ML workflow goes here
+       - name: Train model
+         run: |
+           # Your ML workflow goes here
       #     pip install -r requirements.txt
-      #     python train.py
+           python run.py
