--- a/.github/workflows/cml.yml
+++ b/.github/workflows/cml.yml
@@ -22,8 +22,8 @@ jobs:
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
       - uses: iterative/setup-cml@v1
-       - name: Train model
-         run: |
+      - name: Train model
+        run: |
            # Your ML workflow goes here
-      #     pip install -r requirements.txt
+           pip install -r requirements.txt
            python run.py
