--- a/.github/workflows/cml.yml
+++ b/.github/workflows/cml.yml
@@ -1,29 +1,44 @@
 name: my_rag
-on: [push]
+
+on:
+  push:
+    branches:
+      - main  # Optionally specify the branch or branches to trigger on
+
 jobs:
   run:
     runs-on: ubuntu-latest
-    # optionally use a convenient Ubuntu LTS + DVC + CML image
+    
+    # Optionally use a convenient Ubuntu LTS + DVC + CML image
     # container: ghcr.io/iterative/cml:0-dvc2-base1
+
     steps:
+      # Step 1: Checkout code from the repository
       - name: Checkout code
         uses: actions/checkout@v3
-      # may need to setup NodeJS & Python3 on e.g. self-hosted
-      # - uses: actions/setup-node@v3
-      #   with:
-      #     node-version: '16'
-      - uses: actions/setup-python@v4
+
+      # Step 2: Setup Python environment
+      - name: Setup Python 3.12
+        uses: actions/setup-python@v4
         with:
-           python-version: '3.12.0'
+          python-version: '3.12.0'
+
+      # Step 3: Run Super-Linter to check for code quality issues
       - name: Run Super-Linter
         uses: github/super-linter@latest
         env: 
-         DEFAULT_BRANCH: main
-         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        
-      - uses: iterative/setup-cml@v1
+          DEFAULT_BRANCH: main
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # Step 4: Setup CML (Continuous Machine Learning) for ML workflow tracking
+      - name: Setup CML
+        uses: iterative/setup-cml@v1
+
+      # Step 5: Train the model
       - name: Train model
         run: |
-           # Your ML workflow goes here
-           pip install -r requirements.txt
-           python run.py
+          # Install dependencies from requirements.txt
+          pip install -r requirements.txt
+          
+          # Run the training script
+          python run.py
