--- a/.github/workflows/cml.yml
+++ b/.github/workflows/cml.yml
@@ -52,4 +52,4 @@ jobs:
           pip install -r requirements.txt
           
           # Run the training script
-          python run.py
+          # python run.py
