--- a/.github/workflows/cml.yml
+++ b/.github/workflows/cml.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Train model
         run: |
           # Install dependencies from requirements.txt
-          pip install -r requirements.txt
+          # pip install -r requirements.txt
           
           # Run the training script
           # python run.py
